<resources>
    <string name="app_name">MeetFriends3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="invite_URL">This is Invite URL</string>
    <string name="InvitedAmount">You have invited this much person to use this apps!!</string>
    <string name="discoverySetting">Discovery Setting</string>
    <string name="distance">Distance</string>
    <string name="autoMatchSetting">Automatic Distance(Extend if too few user nearby)</string>
    <string name="autoOff">OFF</string>
    <string name="autoOn">ON</string>
    <string name="showMe">Show Me</string>
    <string name="age">Age</string>
    <string name="onlyMale">Only Male</string>
    <string name="onlyFemale">Only Female</string>
    <string name="tenYearsOld">10-20 years old</string>
    <string name="twentyYearsOld">21-30 years old</string>
    <string name="thirtyYearsOld">31-40 years old</string>
    <string name="category">Category</string>
    <string name="ShareYourMoment">Share Your Moment Here</string>
    <string name="shareMomentText">Your Moments....</string>
    <string name="showMatchesText">Here are the people you matches!!!</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="howToApp">How to use this app ?</string>
    <string name="howToMatches">How can i get more matches ??</string>
    <string name="contactUs">Contact Us!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="signIn">Sign In</string>
    <string name="register">Register</string>
    <string name="registerForm">Registration Form</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>

    <string name="email">Email</string>
    <string name="region">Region</string>
    <string name="url_server">https://memberhoho.000webhostapp.com/api/</string>
    <string name="url_user_read">user/read.php</string>
    <string name="url_user_read_one">user/read_one.php</string>
    <string name="url_user_create">user/create.php</string>
    <string name="Address">address</string>
    <string name="descHint">Describe Yourself</string>
    <string name="description">Description</string>
    <string name="registerNow">Register Now!</string>

    <string name="app_nameTrue">MeetFriends</string>
    <string name="zero">0</string>
    <string name="help1">It is very easy to use this app! Since everything is written in English language, you should be able to understand which word refer to what function!</string>
    <string name="help2">On the Main Page, you can tap and Like more people that show ups! However, the person you have liked had to like you back before both of you can be matches.</string>
    <string name="help3">Our Customer Service Number is : 03-366366366</string>
    <string name="moment">Moment</string>
    <string name="matches">Matches</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="invite">Invite</string>
    <string name="inviteLink">www.invitemeetfriend.com</string>
</resources>
