<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    >

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewRegForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registerForm"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewRegUsername"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/username"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/editTextRegUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewRegPassword"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/password"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/editTextRegPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewRegContact"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/phone"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/editTextRegContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewRegGender"
                    android:layout_width="105dp"
                    android:layout_height="40dp"
                    android:layout_weight="0"
                    android:foregroundGravity="center"
                    android:gravity="center|left"
                    android:text="@string/gender"
                    android:textColor="@android:color/black" />

                <RadioGroup
                    android:id="@+id/rdg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonMale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:foregroundGravity="center"
                        android:gravity="center|left"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/radioButtonFemale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:foregroundGravity="center"
                        android:gravity="center|left"
                        android:text="@string/female" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewRegAge"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/age"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/editTextRegAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/age"
                    android:inputType="number"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewRegEmail"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/email"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/editTextRegEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewRegAddress"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Address"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/editTextRegAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/Address"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewRegDesciption"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/description"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/editTextRegDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/descHint"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonRegisterNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registerNow" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>